app/assets/stylesheets/family_card.css.sass
.family_card .qualifiers
  margin-bottom: 2em
  .label
    margin-right: 1em
  .legend
    background: white
    display: inline-block
    padding: 5px 10px
    .legend-label
      margin-right: 2em
      .label
        display: inline-block
        height: 10px
        width: 10px
      &:last-child
        margin-right: 0px

